--- a/Workspace/MGHWayFinder/res/layout/test.xml
+++ b/Workspace/MGHWayFinder/res/layout/test.xml
@@ -87,9 +87,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/mapLabel"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btnMakePath"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Map Path" />
 
