--- a/Workspace/MGHWayFinder/res/layout/map.xml
+++ b/Workspace/MGHWayFinder/res/layout/map.xml
@@ -14,5 +14,13 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Center on Node 1" />
+    <TextView
+        android:id="@+id/tvX"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/tvY"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
     
 </LinearLayout>
