--- a/Workspace/MGHWayFinder/res/layout/map.xml
+++ b/Workspace/MGHWayFinder/res/layout/map.xml
@@ -4,10 +4,15 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 	
+    <TextView 
+        android:id="@+id/spacer"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+    
     <com.MGHWayFinder.PathView 
         android:id="@+id/pathView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height= "fill_parent" />"
     
     <Button 
         android:id="@+id/buttonCenter"
