--- a/Workspace/MGHWayFinder/res/layout/map.xml
+++ b/Workspace/MGHWayFinder/res/layout/map.xml
@@ -1,31 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 	
-    <TextView 
-        android:id="@+id/spacer"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    
     <com.MGHWayFinder.PathView 
         android:id="@+id/pathView"
         android:layout_width="fill_parent"
-        android:layout_height= "fill_parent" />"
+        android:layout_height="fill_parent" />
     
+   
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/buttons"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_alignParentBottom="true" >
+    <!--
     <Button 
         android:id="@+id/buttonCenter"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Center on Node 1" />
-    <TextView
-        android:id="@+id/tvX"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tvY"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
-    
-</LinearLayout>
+        android:text="Node 1" />
+    -->
+     <Button
+        android:id="@+id/btnPrev"
+      	android:layout_width="60dp"
+       	android:layout_height="wrap_content"
+       	android:text="Prev" />    	     		    	    
+    	   	<Button
+       android:id="@+id/btnNext"
+      	android:layout_width="60dp"
+      	android:layout_height="wrap_content"
+       	android:text="Next"
+       	android:layout_marginLeft="20dp" />
+   	
+ 	     <TextView
+       android:id="@+id/tvX"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textColor="#000000" />
+    	<TextView
+       android:id="@+id/tvY"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textColor="#000000" />
+    	
+
+    	
+    </LinearLayout>
+     
+</RelativeLayout>
