--- a/Workspace/MGHWayFinder/res/layout/listview.xml
+++ b/Workspace/MGHWayFinder/res/layout/listview.xml
@@ -4,9 +4,12 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
+    <ListView 
+   		android:id="@android:id/list"
+        android:layout_width="fill_parent" 
+        android:layout_height="fill_parent"
+        android:drawSelectorOnTop="false"
+  		  />
+
 
 </LinearLayout>
