--- a/Workspace/MGHWayFinder/res/layout/map.xml
+++ b/Workspace/MGHWayFinder/res/layout/map.xml
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/tabhost" android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+	<RelativeLayout 
+		android:layout_width="fill_parent" 
+		android:layout_height="fill_parent">
+		
+			<TabWidget android:id="@android:id/tabs"
+			    android:layout_alignParentBottom="true"
+				android:layout_width="fill_parent" 
+				android:layout_height="wrap_content" />
+	    
+		<FrameLayout android:id="@android:id/tabcontent"
+			android:layout_width="fill_parent" android:layout_height="fill_parent">
+			
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pathTab"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
@@ -15,7 +31,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_alignParentBottom="true" >
+    android:layout_alignParentTop="true" >
     <!--
     <Button 
         android:id="@+id/buttonCenter"
@@ -34,12 +50,23 @@
       	android:layout_height="wrap_content"
        	android:text="Next"
        	android:layout_marginLeft="20dp" />
-   	
+   	     <Button
+        android:id="@+id/btnList"
+      	android:layout_width="60dp"
+       	android:layout_height="wrap_content"
+       	android:text="List" />  
+       	   	     <Button
+        android:id="@+id/btnHelp"
+      	android:layout_width="60dp"
+       	android:layout_height="wrap_content"
+       	android:text="Help" />  
+       	
  	     <TextView
        android:id="@+id/tvX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000" />
+ 	     
     	<TextView
        android:id="@+id/tvY"
        android:layout_width="wrap_content"
@@ -51,3 +78,71 @@
     </LinearLayout>
      
 </RelativeLayout>
+<!-- tab2 list view -->
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/listTab"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+   
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/buttons2"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_alignParentTop="true" >
+    <!--
+    <Button 
+        android:id="@+id/buttonCenter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Node 1" />
+    -->
+     <Button
+        android:id="@+id/btnPrev"
+      	android:layout_width="60dp"
+       	android:layout_height="wrap_content"
+       	android:text="Prev" />    	     		    	    
+    	   	<Button
+       android:id="@+id/btnNext"
+      	android:layout_width="60dp"
+      	android:layout_height="wrap_content"
+       	android:text="Next"
+       	android:layout_marginLeft="20dp" />
+
+       	   	     <Button
+        android:id="@+id/btnHelp"
+      	android:layout_width="60dp"
+       	android:layout_height="wrap_content"
+       	android:text="Help" />  
+       	
+ 	     <TextView
+       android:id="@+id/tvX"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textColor="#000000" />
+ 	     
+    	<TextView
+       android:id="@+id/tvY"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:textColor="#000000" />
+    	
+    	
+    </LinearLayout>
+
+       <ListView 
+   		android:id="@android:id/list"
+        android:layout_width="fill_parent" 
+        android:layout_height="wrap_content"
+        android:drawSelectorOnTop="false"
+        android:layout_below="@id/buttons2"
+  		  />
+       
+       </RelativeLayout>
+   
+
+<!-- closers -->
+		</FrameLayout>
+	</RelativeLayout>
+</TabHost>
