list items clickable now. buttons cleaned up.

--- a/Workspace/MGHWayFinder/res/layout/map.xml
+++ b/Workspace/MGHWayFinder/res/layout/map.xml
@@ -26,9 +26,9 @@
         android:layout_height="fill_parent" />
     
    
-   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+   <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/buttons"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_alignParentTop="true" >
@@ -38,7 +38,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Node 1" />
-    -->
+           	     <Button
+        android:id="@+id/btnList"
+      	android:layout_width="60dp"
+       	android:layout_height="wrap_content"
+       	android:text="List" /> 
+    -->   
      <Button
         android:id="@+id/btnPrev"
       	android:layout_width="60dp"
@@ -48,34 +53,31 @@
        android:id="@+id/btnNext"
       	android:layout_width="60dp"
       	android:layout_height="wrap_content"
+      	android:layout_toRightOf="@id/btnPrev"
        	android:text="Next"
-       	android:layout_marginLeft="20dp" />
-   	     <Button
-        android:id="@+id/btnList"
-      	android:layout_width="60dp"
-       	android:layout_height="wrap_content"
-       	android:text="List" />  
-       	   	     <Button
-        android:id="@+id/btnHelp"
-      	android:layout_width="60dp"
-       	android:layout_height="wrap_content"
-       	android:text="Help" />  
-       	
+       	 />
+        	
  	     <TextView
        android:id="@+id/tvX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
+       android:layout_toRightOf="@id/btnNext"
        android:textColor="#000000" />
  	     
     	<TextView
        android:id="@+id/tvY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
+       android:layout_toRightOf="@id/tvX"
        android:textColor="#000000" />
-    	
-
-    	
-    </LinearLayout>
+ 	
+    	 <Button
+        android:id="@+id/btnHelp"
+      	android:layout_width="60dp"
+       	android:layout_height="wrap_content"
+       	android:layout_alignParentRight="true"
+       	android:text="Help" />	
+    </RelativeLayout>
      
 </RelativeLayout>
 <!-- tab2 list view -->
@@ -85,60 +87,43 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
    
-   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/buttons2"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_alignParentTop="true" >
-    <!--
-    <Button 
-        android:id="@+id/buttonCenter"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Node 1" />
-    -->
-     <Button
-        android:id="@+id/btnPrev"
-      	android:layout_width="60dp"
-       	android:layout_height="wrap_content"
-       	android:text="Prev" />    	     		    	    
-    	   	<Button
-       android:id="@+id/btnNext"
-      	android:layout_width="60dp"
-      	android:layout_height="wrap_content"
-       	android:text="Next"
-       	android:layout_marginLeft="20dp" />
-
-       	   	     <Button
-        android:id="@+id/btnHelp"
-      	android:layout_width="60dp"
-       	android:layout_height="wrap_content"
-       	android:text="Help" />  
-       	
- 	     <TextView
-       android:id="@+id/tvX"
+    android:orientation="horizontal" >
+    	    	<TextView
+       android:id="@+id/tvLVTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:textColor="#000000" />
- 	     
-    	<TextView
-       android:id="@+id/tvY"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:textColor="#000000" />
-    	
-    	
-    </LinearLayout>
+       android:textColor="#ffffff"
+       android:textSize="30sp"
+       android:text="Directions List:" />
+    	    	
+       	<Button
+        android:id="@+id/btnHelpList"
+      	android:layout_width="60dp"
+       	android:layout_height="wrap_content"
+       	android:layout_alignParentRight="true"
+       	android:text="Help" /> 
+		</RelativeLayout>
 
-       <ListView 
-   		android:id="@android:id/list"
-        android:layout_width="fill_parent" 
+    	       <ListView 
+   		android:id="@+id/listNum"
+        android:layout_width="25px" 
         android:layout_height="wrap_content"
-        android:drawSelectorOnTop="false"
+        android:drawSelectorOnTop="true"
         android:layout_below="@id/buttons2"
   		  />
-       
+       <ListView 
+   		android:id="@android:id/list"
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content"
+        android:drawSelectorOnTop="true"
+        android:layout_below="@id/buttons2"
+        android:layout_toRightOf="@id/listNum"
+  		  />
+
        </RelativeLayout>
    
 
