--- a/Workspace/MGHWayFinder/res/layout/test.xml
+++ b/Workspace/MGHWayFinder/res/layout/test.xml
@@ -12,7 +12,8 @@
 				android:layout_height="wrap_content" />
 	    
 		<FrameLayout android:id="@android:id/tabcontent"
-			android:layout_width="fill_parent" android:layout_height="fill_parent">
+			android:layout_width="fill_parent" android:layout_height="fill_parent"
+			android:layout_above="@android:id/tabs">
 
 
 
@@ -22,13 +23,13 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
-    <!--  LOGO - needs to be centered
+
 	    <ImageView
         android:id="@+id/logoView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
         android:src="@drawable/mgh_logo" />
-	    -->
+	    
     <TextView
         android:id="@+id/startNodeLabel"
         android:layout_width="wrap_content"
@@ -72,10 +73,11 @@
 	 </LinearLayout>
     <Button
         android:id="@+id/goButton"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Calculate!" />
-
+        android:layout_width="100dp"
+        android:layout_height="75dp"
+        android:text="Go!" />
+    
+<!-- probably dont need these anymore - DELETE AT CLEANUP
     <TextView
         android:id="@+id/nodePathLabel"
         android:layout_width="wrap_content"
@@ -92,7 +94,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="Map Path" />
-
+-->
 </LinearLayout>
 
 <!-- MAP TAB -->
