--- a/Workspace/MGHWayFinder/res/layout/test.xml
+++ b/Workspace/MGHWayFinder/res/layout/test.xml
@@ -20,7 +20,7 @@
 <!-- DIRECTIONS TAB -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/directionsTab"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
@@ -28,12 +28,14 @@
         android:id="@+id/logoView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
-        android:src="@drawable/mgh_logo" />
+        android:src="@drawable/mgh_logo" 
+        android:layout_gravity = "center"/>
 	    
 	        <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity = "center"
         android:textSize="25sp"
         android:text="WANG WAYFINDER" />
 	    
@@ -42,34 +44,29 @@
 	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		 android:layout_width="fill_parent"
   		  android:layout_height="wrap_content"
-  		  android:orientation="horizontal" >
+  		   >
   		  <TextView
         android:id="@+id/startNodeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:text="Current Location:" />
-	    <Spinner
-	        android:id="@+id/startSpin"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_below="@id/startNodeLabel" />	
-	    <Button
-      	    android:id="@+id/scanStart"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_below="@id/startNodeLabel"
-        	android:layout_toRightOf="@id/startSpin"
-        	android:text="Scan" />
-	    <!--
-	    <Button
-      	    android:id="@+id/startAll"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_below="@id/startNodeLabel"
-        	android:layout_toRightOf="@id/scanStart"
-        	android:text="All" />
-	    -->
+  		  
+   		<Button
+    		android:id="@+id/scanStart"
+   			android:layout_width="wrap_content"
+   			android:layout_height="wrap_content"
+   			android:layout_below="@id/startNodeLabel"
+   			android:layout_alignParentRight="true"
+   			android:text="Scan" />
+   		<Spinner
+   			android:id="@+id/startSpin"
+       		android:layout_width="fill_parent"
+       		android:layout_height="wrap_content"
+       		android:layout_below="@id/startNodeLabel"
+       		android:layout_toLeftOf="@id/scanStart" />
+
+
 	 </RelativeLayout>
 	 
 
@@ -86,43 +83,16 @@
         android:text="Destination:" />
  		 <Spinner
     	    android:id="@+id/endSpin"
-    	    android:layout_width="wrap_content"
+    	    android:layout_width="fill_parent"
         	android:layout_height="wrap_content"
         	android:layout_below="@id/endNodeLabel" />
- 		 <!-- 
-	       <Button
-        	android:id="@+id/endAll"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:layout_below="@id/endNodeLabel"
-        	android:layout_toRightOf="@id/setEnd"
-        	android:text="All" />
-        	 -->
          </RelativeLayout>
     <Button
         android:id="@+id/goButton"
-        android:layout_width="200dp"
+        android:layout_width="fill_parent"
         android:layout_height="75dp"
         android:text="Go!" />
-    
-<!-- probably dont need these anymore - DELETE AT CLEANUP
-    <TextView
-        android:id="@+id/nodePathLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Node Path:" />
 
-    <TextView
-        android:id="@+id/tvNP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Button
-        android:id="@+id/btnMakePath"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Map Path" />
--->
 </LinearLayout>
 
 <!-- MAP TAB -->
