--- a/Workspace/MGHWayFinder/res/layout/map.xml
+++ b/Workspace/MGHWayFinder/res/layout/map.xml
@@ -37,12 +37,15 @@
      <Button
         android:id="@+id/btnPrev"
       	android:layout_width="60dp"
-       	android:layout_height="wrap_content" />    	     		    	    
+       	android:layout_height="wrap_content" 
+       	android:layout_alignParentLeft="true"
+       	android:layout_alignParentBottom="true"/>    	     		    	    
     	   	<Button
        android:id="@+id/btnNext"
       	android:layout_width="60dp"
       	android:layout_height="wrap_content"
       	android:layout_alignParentRight="true"
+      	android:layout_alignParentBottom="true"
        	 />
         	
  	     <TextView
@@ -64,6 +67,7 @@
       	android:layout_width="60dp"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
+       	android:layout_alignParentBottom="true"
        	android:text="Call For Help" />	
     </RelativeLayout>
      
