--- a/Workspace/MGHWayFinder/res/layout/map.xml
+++ b/Workspace/MGHWayFinder/res/layout/map.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/tabhost" android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-	
-			    <!-- OVERLAY ATTEMPT -->
-		   <FrameLayout android:id="@+id/mainFrame"
-			android:layout_width="fill_parent" android:layout_height="fill_parent">
-			    <ImageView
+<!-- OVERLAY ATTEMPT -->
+  <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+      android:id="@+id/mainFrame"
+		android:layout_width="fill_parent" android:layout_height="fill_parent">
+   <ImageView
         android:id="@+id/overlayPic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+   
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/tabhost" android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+	
+
 			    
 	<RelativeLayout 
 		android:layout_width="fill_parent" 
@@ -144,5 +147,6 @@
 
 		</FrameLayout>
 	</RelativeLayout>
-	</FrameLayout>
+	
 </TabHost>
+</FrameLayout>
