--- a/Workspace/MGHWayFinder/res/layout/test.xml
+++ b/Workspace/MGHWayFinder/res/layout/test.xml
@@ -21,9 +21,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/directionsTab"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
 
+    	        <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity = "center"
+        android:textSize="20sp"
+        android:textColor="#ff000000"
+        android:text="DELFIN WAYFINDER" />
+    	        
 	    <ImageView
         android:id="@+id/logoView"
         android:layout_width="wrap_content"
@@ -31,26 +40,23 @@
         android:src="@drawable/mgh_logo" 
         android:layout_gravity = "center"/>
 	    
-	        <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity = "center"
-        android:textSize="25sp"
-        android:text="WANG WAYFINDER" />
+
 	    
     
     
 	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		 android:layout_width="fill_parent"
   		  android:layout_height="wrap_content"
+  		  android:paddingBottom="15dp"
   		   >
   		  <TextView
         android:id="@+id/startNodeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:text="Current Location:" />
+        android:textColor="#ff000000"
+        android:layout_centerHorizontal="true"
+        android:text="Location:" />
   		  
    		<Button
     		android:id="@+id/scanStart"
@@ -74,12 +80,14 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     	android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
-    	android:orientation="horizontal" >
+    	android:paddingBottom="15dp" >
 	        <TextView
         android:id="@+id/endNodeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
+        android:textColor="#ff000000"
+        android:layout_centerHorizontal="true"
         android:text="Destination:" />
  		 <Spinner
     	    android:id="@+id/endSpin"
@@ -91,6 +99,7 @@
         android:id="@+id/goButton"
         android:layout_width="fill_parent"
         android:layout_height="75dp"
+        android:textSize="40sp"
         android:text="Go!" />
 
 </LinearLayout>
@@ -104,10 +113,12 @@
     
         <TextView
         android:id="@+id/mapLabel"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="@id/mapTab"
-        android:text="                          Select a floor" />
+        android:textColor="#ff000000"
+        android:layout_centerHorizontal="true"
+        android:text="Select a floor" />
     
         <Button
         android:id="@+id/btnMapFirst"
@@ -132,7 +143,7 @@
         android:layout_height="fill_parent" 
         android:layout_centerInParent="true"
         android:layout_below="@id/btnMapSec"
-        android:src="@drawable/mgh_logo"
+        
          />
 
 </RelativeLayout>
@@ -186,10 +197,15 @@
 
 
 <!-- HELP TAB -->
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scroller"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/helpTab"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
     
     <TextView
@@ -198,8 +214,9 @@
         android:layout_height="wrap_content"
         android:text="USER MANUAL" />
 
+    
 </LinearLayout>
-
+</ScrollView>
 
 <!-- closers -->
 		</FrameLayout>
